<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_backgound"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="20dp"
        android:textAlignment="center"
        android:text="@string/rutasPreTroncales"
        android:textSize="20dp">
    </TextView>

    <LinearLayout
        android:id="@+id/btnRutaP3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP3"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaP5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP5"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaP6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP6"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaP7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP7"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaP13"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP13"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaP15"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaP15"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

</LinearLayout>
