<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_backgound"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="20dp"
        android:textAlignment="center"
        android:text="@string/rutasComplementarias"
        android:textSize="20dp">
    </TextView>

    <LinearLayout
        android:id="@+id/btnRutaAP1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaAP1"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaAP3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaAP3"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaAP4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaAP4"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRutaAP12"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/location">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/rutaAP12"
            android:textSize="20dp">
        </TextView>

    </LinearLayout>

</LinearLayout>
