<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tarjeta"
    android:background="@drawable/fondotarjeta">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackMenuTarjeta"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/green"
        android:drawableBottom="@drawable/back_arrow"
        android:onClick="onClickMenu"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFondos"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:backgroundTint="#4D8110"
        android:text="@string/fondos"
        android:transitionName="btnTrans"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.319" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="120dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <RadioButton
            android:id="@+id/rbSaldo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ 2.500" />

        <RadioButton
            android:id="@+id/rbSaldo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ 5.000" />

        <RadioButton
            android:id="@+id/rbSaldo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ 10.000" />

        <RadioButton
            android:id="@+id/rbSaldo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$ 20.000" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreUser"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="217dp"
        android:background="@drawable/tarjeta"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14">

        <TextView
            android:id="@+id/txtNroTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="15dp"
            android:text="@string/nroTarjeta"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSaldoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-250dp"
            android:layout_marginTop="120dp"
            android:text="@string/saldo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>