<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/ImgLogo"
        android:layout_width="253dp"
        android:layout_height="59dp"
        android:transitionName="logoImageTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/InputLoginEmail"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:background="@drawable/usuario"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        android:transitionName="inputEmailTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/TxtToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿No tienes cuenta? registrate"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:transitionName="textTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtnEntrar"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:backgroundTint="#4D8110"
        android:text="@string/BtnEntrar"
        android:transitionName="btnTrans"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <EditText
        android:id="@+id/InputLoginPasswd"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:background="@drawable/usuario"
        android:drawableLeft="@drawable/security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="25dp"
        android:transitionName="inputPasswdTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        app:passwordToggleEnabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>